--- a/templates/index.html
+++ b/templates/index.html
@@ -10,31 +10,50 @@
 <body>
     <form method="post" action="result" enctype="multipart/form-data">
         <div class = "inputs">
-            <label for="Bpressure">Blood Pressure:</label>
-            <div class="tbox"><input type="text" id="Bpressure" name="Bpressure"><br><br></div>
-            <label for="Fever">Fever:</label>
-            <div class="tbox"><input type="text" id="Fever" name="Fever"><br><br></div>
-            <label for="Diabetes">Diabetes:</label>
-            <div class="tbox"><input type="text" id="Diabetes" name="Diabetes"><br><br></div>
-            <label for="Vomit">Vomit:</label>
-            <div class="tbox"><input type="text" id="Vomit" name="Vomit"><br><br></div>
+            <label for="Age">Age:</label>
+            <div class="tbox"><input type="text" id="Age" name="Age"><br><br></div>
+            <label for="NaToK">Na to K:</label>
+            <div class="tbox"><input type="text" id="NaToK" name="NaToK"><br><br></div>
+            <label for="Sex">Sex:</label>
+            <div class="tbox">
+                <select id="Sex" name="Sex">
+                    <option value="0">F</option>
+                    <option value="1">M</option>
+                </select>
+                
+                <br><br>
+            </div>
+            <label for="BP">BP:</label>
+            <div class="tbox">
+                <select id="BP" name="BP">
+                    <option value="0">HIGH</option>
+                    <option value="1">LOW</option>
+                    <option value="2">NORMAL</option>
+                </select>
+                
+                <br><br>
+            </div>
+            <label for="Cholesterol">Cholesterol:</label>
+            <div class="tbox">
+                <select id="Cholesterol" name="Cholesterol">
+                    <option value="0">HIGH</option>
+                    <option value="1">NORMAL</option>
+                </select>
+                
+                <br><br>
+            </div>
+
         </div>
         
         <div>
             <label for="Classifiers">Classifiers:</label>
-            <input type="radio" id="linreg" name="classifier" value="linear">
-                <label for="linreg">Linear Regression</label>
-                <input type="radio" id="near" name="classifier" value="nearestN">
-                <label for="near">Nearest Neighbor</label>
-                <input type="radio" id="nb" name="classifier" value="naive">
-                <label for="nb">Naive Bayes</label>
-                <br>
-                <input type="radio" id="svm" name="classifier" value="svm">
-                <label for="svm">SVM</label>
-                <input type="radio" id="dectree" name="classifier" value="decisiontree">
-                <label for="dectree">Decision Tree</label>
-                <input type="radio" id="ann" name="classifier" value="ann">
-                <label for="ann">ANN</label><br><br>
+            <input type="radio" id="nb" name="classifier" value="naive">
+            <label for="nb">Naive Bayes</label>
+            <br>
+            <input type="radio" id="dectree" name="classifier" value="decisiontree">
+            <label for="dectree">Decision Tree</label>
+            <input type="radio" id="ann" name="classifier" value="ann">
+            <label for="ann">ANN</label><br><br>
         </div>
 
         <div>
